--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ absl-py==2.1.0
 alabaster==0.7.12
 altair==5.0.1
 altgraph==0.17
-anaconda-client==1.7.2
+anaconda-client
 anaconda-navigator==1.9.12
 anaconda-project==0.8.3
 annotated-types==0.5.0
